syntax = "proto2";

option go_package = ".;gameProto";

//错误消息(500)
message error_notice_s2c{
	required int32 errorCode = 1;
}



//客户端ping(1001)
message client_ping_c2s{

}


//用户登录C2S(2001)
message user_login_c2s {
	required string account = 1;
}

//用户登录S2C(2002)
message user_login_s2c {
	required string token = 1;
}

//其他客户端登录S2C(2004)
message user_otherLogin_notice_s2c{

}




//用户数据
message userInfo {
	required uint64 id = 1;
	required string name = 2;
	required int32  money = 3;
}

//获取用户信息C2S(3001)
message user_getInfo_c2s {
	required string token = 1;
}

//获取用户信息S2C(3002)
message user_getInfo_s2c {
	required userInfo data = 1;
}




//用户加入聊天C2S(4001)
message user_joinChat_c2s {
	required string token = 1;
}

//用户加入聊天S2C(4002)
message user_joinChat_s2c {
}

//用户聊天消息C2S(4003)
message user_chat_c2s {
    required string msg = 1;
}

//用户聊天消息S2C(4004)
message user_chat_notice_s2c {
    required uint64 userId = 1;
    required string userName = 2;
    required string msg = 3;
}